# cmake-c11

./: CMakeLists.txt  log.c  log.h  test.c
